data/derived/sp14/progs/unify/prog0304.ml.out
Characters 47-64:
  else digitsOfInt(n/10)::(n mod 10);;
       ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
